--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 __pycache__/
 figures/
 slurm/
-save/
 dir.py
 multiple_gen.py
 multiple_gen2.py
 multiple_gen3.py
 multiple_gen4.py
 *.sh
+env_sub_torch201-39.yml
