--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,10 @@ multiple_gen.py
 multiple_gen2.py
 multiple_gen3.py
 multiple_gen4.py
+multiple_gen5.py
+multiple_gen6.py
+multiple_gen7.py
+multiple_gen8.py
+multiple_stab.py
 *.sh
 env_sub_torch201-39.yml
