--- a/env_sub_torch23-311.yml
+++ b/env_sub_torch23-311.yml
@@ -15,9 +15,9 @@ dependencies:
 - pip
   #- pylint
   #- pymatgen=2020.12.31
-- python=3.9.*
+- python=3.11
 - pytorch-lightning=1.3.8
-- pytorch=2.0.1
+- pytorch=2.3
 - seaborn
 - tqdm
 - pip:
