--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ figures/
 slurm/
 conf_sg/
 save_tmp/
-screening/  # tmp
+screening/   # tmp
 dir.py
 multiple_gen.py
 multiple_gen2.py
@@ -25,3 +25,6 @@ env_sub_torch23-311.yml
 # data 
 data/*/*.pt
 data*/*/*.pt
+
+# home
+config_scigen.py
