--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,11 @@ data*/*/*.pt
 conf/data/alex_2d.yaml
 
 # home
+models/
 config_scigen.py
 gen_mul_mt.py
 gen_mul_2d.py
 
 # screening 
 screening/
+
