--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,15 @@ config_scigen.py
 gen_mul_mt.py
 gen_mul_2d.py
 gen_mul_ro.py
+gen_mul_elem.py
+gen_mul_natm_elem.py
+gen_mul_hetero.py
+
+
+crystalnn_bond.py
+mat_statistics.py
+mat_statistics.ipynb
+mat_statistics2.ipynb
 
 # screening 
 screening/
