--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ multiple_gen6.py
 multiple_gen7.py
 multiple_gen8.py
 multiple_stab.py
+gen_mul_elem_cifs.py
 *.sh
 env_sub_torch201-39.yml
 env_sub_torch23-311.yml
